# ffmpeg_remote_desktop

./: .clangd  .gitignore  CMakeLists.txt  main.cpp  readme.md
src/: CMakeLists.txt
src/server/: main.cpp
src/server/ScreenRecorder/: ScreenRecoder.cpp  ScreenRecoder.h
src/server/log/: GlobalLog.cpp  GlobalLog.h
